<resources>
    <string name="app_name">购物商城</string>
    <string name="navigation_drawer_open">打开导航栏</string>
    <string name="navigation_drawer_close">关闭导航栏</string>
    <string name="nav_header_title">购物商城</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">购物首页</string>
    <string name="menu_gallery">历史订单</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="register_page">注册</string>
    <string name="shopping_logo">购物商城</string>
    <string name="menu_users">用户管理</string>
    <string name="register_username">用户名</string>
    <string name="register_password">密码</string>
    <string name="nickname">昵称</string>
    <string name="register_confirm">注册</string>
    <string name="menu_logout">登出</string>

</resources>